--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,5 +1,5 @@
 %*
-%* Seven Kingdoms: Ancient Adversaries
+%* Ten Kingdoms: Ancient Adversaries
 %*
 %* Copyright 1997,1998 Enlight Software Ltd.
 %* Copyright 2018 Timothy Rink
@@ -45,7 +45,7 @@
     \renewcommand{\headrulewidth}{.5pt} % From original manual?
     \fancyhf[lh,rh,ch]{}
     \fancyhf[leh]{\nouppercase{\textit{\leftmark}}}
-    \fancyhf[roh]{\textit{Seven Kingdoms: Ancient Adversaries}}
+    \fancyhf[roh]{\textit{Ten Kingdoms: Ancient Adversaries}}
     
 \usepackage[explicit]{titlesec} % For modification of titles
 % \titlespacing\command{left}{before}{after}
@@ -110,12 +110,12 @@
 \begin{document}
 
 \title{
-\includegraphics[width=0.9\linewidth]{7klogo}~\\[1cm]
+\includegraphics[width=0.9\linewidth]{10kingdoms_logo}~\\[1cm]
 {\Huge{\textbf{Ancient Adversaries}}}~\\[1cm]
 {\huge{\textbf{Instruction Manual}}}
 }
 \author{Chris Whitehouse et al. Updated by members of the \\
-Seven Kingdoms: Ancient Adversaries OSS Project} % Do not change.
+Ten Kingdoms: Ancient Adversaries OSS Project} % Do not change.
 \date{2018-07-29} % Do not change.
 
 \frontmatter
@@ -123,7 +123,7 @@ Seven Kingdoms: Ancient Adversaries OSS Project} % Do not change.
 
 \section*{Copyright Notice}
 
-Seven Kingdoms: Ancient Adversaries Instruction Manual
+Ten Kingdoms: Ancient Adversaries Instruction Manual
 
 Copyright 1997, 1998 Enlight Software Ltd.
 
@@ -137,23 +137,23 @@ You should have received a copy of the GNU General Public License along with thi
 
 \subsubsection*{Music}
 
-The music is the work of Bjørn Lynne, Copyright 1997, and is not provided under the GPL. It may be freely downloaded and used with Seven Kingdoms: Ancient Adversaries but not modified or repurposed into derivative works.
+The music is the work of Bjørn Lynne, Copyright 1997, and is not provided under the GPL. It may be freely downloaded and used with Ten Kingdoms: Ancient Adversaries but not modified or repurposed into derivative works.
 
 \subsubsection*{Trademark}
 
-Seven Kingdoms is a trademark of Enlight Software Ltd., and the 7kfans project is using the trademark with permission. This license does not constitute a transfer of any ownership, rights, or authority to the trademarks owned by Enlight. Any questions regarding use must be directed to Enlight.
+Ten Kingdoms is a trademark of Enlight Software Ltd., and the 7kfans project is using the trademark with permission. This license does not constitute a transfer of any ownership, rights, or authority to the trademarks owned by Enlight. Any questions regarding use must be directed to Enlight.
 
 \clearpage
 
 \section*{Project Introduction}
 
-\textswab{\huge{I}}n 2009, Trevor Chan from Enlight Software released the source code for \textit{Seven Kingdoms: Ancient Adversaries}. He released it under a community project so that developers can provide some long awaited bug fixes and address some other game-play issues.
+\textswab{\huge{I}}n 2009, Trevor Chan from Enlight Software released the source code for \textit{Ten Kingdoms: Ancient Adversaries}. He released it under a community project so that developers can provide some long awaited bug fixes and address some other game-play issues.
 
-The official website for \textit{Seven Kingdoms: Ancient Adversaries} OSS Project is at https://7kfans.com/. Here you will find the forums and download page.
+The official website for \textit{Ten Kingdoms: Ancient Adversaries} OSS Project is at https://7kfans.com/. Here you will find the forums and download page.
 
-\textit{Seven Kingdoms: Ancient Adversaries} has been under active development since its 2009 release. If you want to see what has been fixed or changed, see the changelogs for the official releases under News.
+\textit{Ten Kingdoms: Ancient Adversaries} has been under active development since its 2009 release. If you want to see what has been fixed or changed, see the changelogs for the official releases under News.
 
-This manual is part of the community project. It has been updated to reflect the current status of \textit{Seven Kingdoms: Ancient Adversaries}.
+This manual is part of the community project. It has been updated to reflect the current status of \textit{Ten Kingdoms: Ancient Adversaries}.
 
 \section*{Registration}
 
