--- a/doc/src/credits.tex
+++ b/doc/src/credits.tex
@@ -1,5 +1,5 @@
 %*
-%* Seven Kingdoms: Ancient Adversaries
+%* Ten Kingdoms: Ancient Adversaries
 %*
 %* Copyright 1997,1998 Enlight Software Ltd.
 %* Copyright 2018 Timothy Rink
@@ -61,7 +61,7 @@
 
 \clearpage
 
-\section{Seven Kingdoms: Ancient Adversaries OSS Project}
+\section{Ten Kingdoms: Ancient Adversaries OSS Project}
 
 
 \begin{tabular}{p{1in} p{3in}}
