--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-Seven Kingdoms: Ancient Adversaries
+Ten Kingdoms: Ancient Adversaries
 -----------------------------------
 
 Release version 2.15.7
 Project website: www.7kfans.com
 Downloads and source repo: sourceforge.net/projects/skfans
 
-This is a GPL release of the Seven Kingdoms: Ancient Adversaries thanks to
+This is a GPL release of the Ten Kingdoms: Ancient Adversaries thanks to
 Enlight Software which granted the ability to license the game under a
 free and open source license in 2009. See the file "COPYING" for the
 details of the license. We are indebted to Enlight for making the 7kfans
@@ -49,7 +49,7 @@ Required dependencies
 Optional dependencies
 * libcurl for full 7kfans multiplayer integration (website requires TLS1.2)
 * gettext 0.19
-* Game music: 7kaa-music-2.15
+* Game music: 10kingdoms-music-2.15
   -> Packagers: Copy music into program data folder or PACKAGE_DATA_DIR
   -> Make sure the file names are in upper-case
 * NSIS for building a Windows installer
@@ -67,7 +67,7 @@ Running locally from source build
 --------
 
 To run the game from the build directory, you need to point to the game data
-folder. The game data folder is set by the environment variable SKDATA. In
+folder. The game data folder is set by the environment variable TKDATA. In
 a bash shell, this can be accomplished by
-$ SKDATA=data src/7kaa
+$ TKDATA=data src/10kingdoms
 
