--- a/doc/src/introduction.tex
+++ b/doc/src/introduction.tex
@@ -1,5 +1,5 @@
 %*
-%* Seven Kingdoms: Ancient Adversaries
+%* Ten Kingdoms: Ancient Adversaries
 %*
 %* Copyright 1997,1998 Enlight Software Ltd.
 %* Copyright 2018 Timothy Rink
@@ -21,7 +21,7 @@
 
 \chapter[Introduction]{{\Huge I}NTRODUCTION}
 
-\textswab{\huge{E}}nter the world of \textit{Seven Kingdoms: Ancient Adversaries}, a world of intrigue and diplomacy, of trade, conquest, and espionage.
+\textswab{\huge{E}}nter the world of \textit{Ten Kingdoms: Ancient Adversaries}, a world of intrigue and diplomacy, of trade, conquest, and espionage.
 
 % typo here
 
@@ -29,6 +29,6 @@ Take control of any of the following emerging civilizations: Chinese, Persian, J
 
 Begin with a single, modest village under your command, and go on to conquer an entire world by force of arms, by guile and persuasion, or by whatever other means you choose.
 
-\textit{Seven Kingdoms: Ancient Adversaries} is a real-time game of epic strategy and empire building. Players compete against up to six AI opponents or human players for control of land, trade, and peoples.
+\textit{Ten Kingdoms: Ancient Adversaries} is a real-time game of epic strategy and empire building. Players compete against up to six AI opponents or human players for control of land, trade, and peoples.
 
 Wage open warfare on your rivals, or forge alliances with them. Send spies to infiltrate their ranks, or hold your spies back to guard against your enemies’ prying eyes. Mine ore and manufacture goods, then build markets and establish trade routes to bring gold flowing into your coffers. Have your scientists research new weapons of war, or turn from science to the mystic arts, and seek the ultimate power: the ability to summon the aid of the gods. All these choices and more are yours.
