--- a/doc/src/starting_new_game.tex
+++ b/doc/src/starting_new_game.tex
@@ -66,7 +66,7 @@ Non-US keyboard mapping and UTF-8 input
 \begin{wrapfigure}{r}{0.1\textwidth}
 	\vspace{-20pt}
 	\begin{center}
-		\includegraphics[width=0.1\textwidth]{7kicongray}
+		\includegraphics[width=0.1\textwidth]{10kingdoms_icongray}
 	\end{center}
 	\vspace{-20pt}
 \end{wrapfigure}
